--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,11 +9,11 @@
     <body>
         <div>Microblog:
 					<a href="{{ url_for('index') }}">Home</a>
-					{{% if current_user.is_anonymous %}}
+					{% if current_user.is_anonymous %}
 					<a href="{{ url_for('login') }}">Login</a>
-					{{% else %}}
+					{% else %}
 					<a href="{{ url_for('logout') }}">Login</a>
-					{{% endif %}}
+					{% endif %}
 				</div>
         <hr>
 				{% with messages = get_flashed_messages() %}
