--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,6 +15,7 @@
 					<a href="{{ url_for('user', username=current_user.username) }}">Profile</a>
 					<a href="{{ url_for('logout') }}">Logout</a>
 					{% endif %}
+					<a href="{{ url_for('explore') }}">Explore</a>
 				</div>
         <hr>
 				{% with messages = get_flashed_messages() %}
